app/assets/stylesheets/application.css
body {
  font-family: Helvetica;
  height:100%;
  min-height: 900px;
}

ul li {
  list-style-type: none;
}

a {
  color: teal;
  text-decoration: none;
}

a:visited {
  color: teal;
}

a:hover {
  color: orange;
  text-decoration: underline;
}

/*Header*/
#user_nav {
  text-align: right;
  font-size: 15px;
}

#header {
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 2px solid;
  color: black;
  display: block;
}

#slogan {
  font-family: Georgia, serif;
  font-style: italic;
  font-size: 15px;
}

#admin_tools {
  position: absolute;
  top: 130px;
  right: 20px;
  padding: 10px;
  border: 1px dotted #3b3b3b;
  background: #e6e6e6;
}

/*Content*/
#columns {
  background: LightGrey;
  min-height: 900px;
}

#main {
  margin-left: 17em;
  padding-top: 4ex;
  padding-left: 2em;
  background: white;
  min-height: 900px;
}

#notice {
  color: #b14b02;
}

/*Side Navigation*/
#nav {
  float: left;
  padding-top: 1em;
  padding-left: 1em;
  padding-bottom: 1em;
  text-align: left;
  width: 16em;
}

#side_nav {
  padding-left: -40px ! important;
  padding-right: 18px;
}

#dropdown, #categories_dropdown {
  display:none
}

#fun_fact{
  border: 2px dotted #3b3b3b;
  background: #a5c7cf;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

#featured_product {
  border: 2px dotted #3b3b3b;
  background: #ffd2b3;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
  text-align: center;
}

.filler_text {
  font-size: 11pt;
  line-height: 1.25em;
}

/*Products Gallery*/
.product {
  margin:5px;
  padding: 5px;
  height:auto;
  width:172px;
  float:left;
}

.product #rating_img {
  margin:0px;
  display:block;
  height:30px;
}
.product #rating_img img {
  margin:0px;
  padding: 0px;
}

.product img {
  display:inline;
  margin:5px;
  border:1px solid #ffffff;
}

.product a:hover img {
  box-shadow: 10px 10px 5px #888888;
}

#product_description {
  vertical-align: top;
  padding-top: 10px;
  padding-left: 10px;
  line-height: 25px;
  font-size: 15px;
}

/*Other Pages*/
#header td {
  vertical-align: bottom;
  padding-right: 15px;
}

.title {
  font-weight: bold;
  font-size: 20px;
}

#edit_destroy {
  font-size: 12px;
}

#user_table td {
  padding-right: 40px;
  vertical-align: top;
}

#my_products {
  width: 50%;
}

#seller_buttons {
  display:inline-block;
}

#order_history td, th {
  padding: 10px;
}

#order_history th {
  background-color:#cccccc;
  border-bottom: 2px solid grey;
}

#order_history table {
  text-align:left;
  font-size:14px;
  color:#000000;
}

/*Product Show Page*/
.box {
  width: 800px;
  vertical-align: top;
  padding-left: 10px;
  display: inline-block;
  height: 320px;
}
.image {
  padding: 30px 10px 5px 10px;
  float: left;
  width: 200px;
  height: 100%;
}

.product_details {
  margin-left:20px;
  padding-left: 10px;
}

#description {
  padding: 20px 0 20px 0;
}

